# reve-rs

./: .gitignore  Cargo.toml  README.md  bench.py  bench.sh
examples/: benchmark.rs
figures/: benchmark_results.json
src/: config.rs  data.rs  encoder.rs  lib.rs  position_bank.rs  weights.rs
src/model/: attention.rs  feedforward.rs  fourier4d.rs  geglu.rs  mod.rs  reve.rs  rms_norm.rs  transformer.rs
tests/: forward_pass.rs  python_parity.rs
