[package]
name = "reve-rs"
version = "0.0.1"
edition = "2021"
description = "REVE EEG Foundation Model — inference in Rust with Burn ML"
keywords      = ["eeg", "foundational", "BCI", "GPU", "CPU"]
categories    = ["science", "mathematics"]
authors       = ["Eugene Hauptmann"]
license       = "Apache-2.0"
homepage      = "https://github.com/eugenehp/reve-rs"
repository    = "https://github.com/eugenehp/reve-rs"
documentation = "https://docs.rs/reve-rs"
readme        = "README.md"

exclude = [
    "data/",
    "figures/",
    "scripts/",
    "tests/vectors/",
]

[lib]
name = "reve_rs"
path = "src/lib.rs"

[[bin]]
name = "infer"
path = "src/bin/infer.rs"

[[bin]]
name = "download_weights"
path = "src/bin/download_weights.rs"
required-features = ["hf-download"]

[features]
default = ["ndarray"]

# ── CPU backends ─────────────────────────────────────────────────────────────
ndarray         = ["dep:burn-ndarray", "burn/ndarray"]
blas-accelerate = ["burn-ndarray?/blas-accelerate"]
openblas-system = ["burn-ndarray?/blas-openblas-system"]

# ── GPU backend ──────────────────────────────────────────────────────────────
wgpu            = ["burn/wgpu"]
metal           = ["wgpu", "burn-wgpu/metal"]
vulkan          = ["wgpu", "burn-wgpu/vulkan"]

# ── Utilities ────────────────────────────────────────────────────────────────
hf-download     = ["dep:hf-hub"]

[dependencies]
burn = { version = "0.20.1", default-features = false, features = ["std", "simd"] }
burn-ndarray = { version = "0.20.1", default-features = false, features = ["std", "simd", "multi-threads"], optional = true }
burn-wgpu = { version = "0.20.1", default-features = true, optional = true }

safetensors = "0.7"
half = { version = "2", features = ["bytemuck"] }
clap = { version = "4", features = ["derive", "env"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.102"
hf-hub = { version = "0.5", default-features = false, features = ["ureq"], optional = true }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
